--- a/app/src/main/res/layout/dialog_new_folder_add.xml
+++ b/app/src/main/res/layout/dialog_new_folder_add.xml
@@ -2,33 +2,33 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="">
+    tools:context=".view.folder.screens.FolderAddDialogFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/black_transparent_500">
+        android:layout_height="match_parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:background="@drawable/background_dialog"
-            android:paddingLeft="20dp"
-            android:paddingBottom="20dp"
             android:layout_marginHorizontal="20dp"
-            app:layout_constraintTop_toTopOf="parent"
+            android:background="@drawable/background_dialog"
+            android:paddingStart="20dp"
+            android:paddingBottom="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
+            app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
+                android:id="@+id/close"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
                 android:padding="12dp"
-                android:layout_marginRight="8dp"
                 android:src="@drawable/ic_delete"
                 android:stateListAnimator="@null"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -42,7 +42,7 @@
                 android:fontFamily="@font/nanum_square_eb"
                 android:text="@string/folder_add_dialog_title"
                 android:textColor="@color/gray_700"
-                android:textSize="15dp"
+                android:textSize="15sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -51,34 +51,35 @@
                 android:id="@+id/new_folder_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
-                android:layout_marginRight="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="20dp"
                 app:layout_constraintTop_toBottomOf="@id/title">
 
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/folder_image"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:src="@mipmap/ic_main"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                <!-- TODO 폴더 이미지 삭제 고려 중 -->
+                <!--                <de.hdodenhof.circleimageview.CircleImageView-->
+                <!--                    android:id="@+id/folder_image"-->
+                <!--                    android:layout_width="40dp"-->
+                <!--                    android:layout_height="40dp"-->
+                <!--                    android:src="@mipmap/ic_main"-->
+                <!--                    app:layout_constraintStart_toStartOf="parent"-->
+                <!--                    app:layout_constraintTop_toTopOf="parent" />-->
 
                 <EditText
                     android:id="@+id/folder_name"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:fontFamily="@font/nanum_square_r"
+                    android:layout_marginEnd="@dimen/spacing12"
+                    android:background="@null"
+                    android:fontFamily="@font/nanum_square_b"
                     android:hint="@string/folder_add_dialog_detail"
                     android:maxLength="10"
-                    android:padding="12dp"
                     android:textColor="@color/gray_700"
-                    android:textSize="15dp"
+                    android:textSize="15sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@id/folder_name_length"
-                    app:layout_constraintStart_toEndOf="@id/folder_image"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    tools:text="새 폴더 추가" />
+                    tools:text="새 폴더" />
 
                 <TextView
                     android:id="@+id/folder_name_length"
@@ -86,25 +87,32 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/nanum_square_r"
                     android:text="@string/folder_add_dialog_folder_name_length_format"
+                    android:maxLength="10"
                     android:textColor="@color/gray_700"
                     android:textSize="15dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:text="7/10글자" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/black"
+                    app:layout_constraintBottom_toBottomOf="parent" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <Button
-                android:id="@+id/confirm"
+                android:id="@+id/add"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginRight="20dp"
-                android:background="@drawable/background_button_line"
+                android:background="@drawable/selector_dialog_yes_button_background"
                 android:fontFamily="@font/nanum_square_eb"
-                android:onClick="onClick"
                 android:outlineProvider="none"
-                android:text="@string/confirm"
-                android:textColor="@color/gray_700"
+                android:text="@string/add"
+                android:textColor="@color/selector_dialog_yes_button_text_color"
                 android:textSize="15dp"
                 app:layout_constraintTop_toBottomOf="@id/new_folder_container" />
         </androidx.constraintlayout.widget.ConstraintLayout>
