--- a/app/src/main/res/layout/fragment_folder_detail.xml
+++ b/app/src/main/res/layout/fragment_folder_detail.xml
@@ -2,18 +2,27 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="">
+    tools:context="com.hyeeyoung.wishboard.view.folder.screens.FolderDetailFragment">
+
+    <data>
+
+        <import type="androidx.navigation.Navigation" />
+
+        <variable
+            name="viewModel"
+            type="com.hyeeyoung.wishboard.viewmodel.WishListViewModel" />
+    </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/white">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/title_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
-            android:padding="20dp"
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageButton
@@ -21,7 +30,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
                 android:background="@android:color/transparent"
+                android:onClick="@{(v) -> Navigation.findNavController(v).popBackStack()}"
+                android:padding="@dimen/spacing12"
                 android:src="@drawable/ic_back"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -29,8 +42,10 @@
             <ImageButton
                 android:id="@+id/more"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
+                android:layout_marginEnd="8dp"
                 android:background="@android:color/transparent"
+                android:padding="@dimen/spacing12"
                 android:src="@drawable/ic_more"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -44,16 +59,16 @@
             android:fontFamily="@font/nanum_square_eb"
             android:paddingHorizontal="20dp"
             android:paddingBottom="10dp"
+            android:text="@{viewModel.folderItem.name}"
             android:textColor="@color/gray_700"
             android:textSize="15dp"
             app:layout_constraintTop_toBottomOf="@id/title_container"
             tools:text="폴더명" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerview_folders_detail"
+            android:id="@+id/wish_list"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:padding="10dp"
             android:scrollbarFadeDuration="0"
             android:scrollbarSize="5dp"
             android:scrollbarThumbVertical="@android:color/darker_gray"
