--- a/app/src/main/res/layout/item_folder_square.xml
+++ b/app/src/main/res/layout/item_folder_square.xml
@@ -17,11 +17,11 @@
         android:background="@color/white"
         android:padding="10dp">
 
-        <!-- @brief : 폴더화면 아이템 리스트 중 아이템 하나의 뷰 -->
         <ImageView
             android:id="@+id/folder_image"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:foreground="@color/ultraSemiTransparent"
             android:scaleType="centerCrop"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintEnd_toEndOf="parent"
@@ -29,43 +29,49 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:src="@drawable/sample" />
 
-        <TextView
-            android:id="@+id/folder_name"
-            android:layout_width="wrap_content"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="2dp"
-            android:layout_marginTop="10dp"
-            android:fontFamily="@font/nanum_square_eb"
-            android:text="@{item.name}"
-            android:textColor="@color/gray_700"
-            android:textSize="13dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="parent"
-            tools:text="폴더명" />
+            app:layout_constraintTop_toBottomOf="@id/folder_image">
 
-        <TextView
-            android:id="@+id/item_count"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:fontFamily="@font/nanum_square_b"
-            android:textColor="@color/gray_200"
-            android:textSize="13dp"
-            app:layout_constraintStart_toStartOf="@id/folder_name"
-            app:layout_constraintTop_toBottomOf="@id/folder_name"
-            tools:text="10" />
+            <TextView
+                android:id="@+id/folder_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="2dp"
+                android:layout_marginTop="10dp"
+                android:fontFamily="@font/nanum_square_eb"
+                android:text="@{item.name}"
+                android:textColor="@color/gray_700"
+                android:textSize="13sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="폴더명" />
 
-        <ImageButton
-            android:id="@+id/more_folder"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="2dp"
-            android:background="@android:color/transparent"
-            android:onClick="onClick"
-            android:paddingBottom="15dp"
-            android:src="@drawable/ic_folder_more"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/folder_name" />
+            <TextView
+                android:id="@+id/item_count"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:fontFamily="@font/nanum_square_b"
+                android:text="@{Integer.toString(item.itemCount != null ? item.itemCount : 0)}"
+                android:textColor="@color/gray_200"
+                android:textSize="13sp"
+                app:layout_constraintStart_toStartOf="@id/folder_name"
+                app:layout_constraintTop_toBottomOf="@id/folder_name"
+                tools:text="10" />
 
+            <ImageButton
+                android:id="@+id/more_folder"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="2dp"
+                android:background="@android:color/transparent"
+                android:paddingBottom="15dp"
+                android:src="@drawable/ic_folder_more"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@id/folder_name" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
