[feat] 아이템 수동 등록 내 폴더 리스트 조회 UI 구현

--- a/app/src/main/res/navigation/wish_item_registration_nav_graph.xml
+++ b/app/src/main/res/navigation/wish_item_registration_nav_graph.xml
@@ -13,6 +13,9 @@
         <action
             android:id="@+id/action_wish_to_gallery_image"
             app:destination="@id/galleryImageFragment" />
+        <action
+            android:id="@+id/action_wish_to_folder_list"
+            app:destination="@id/folderListFragment" />
     </fragment>
 
     <fragment
@@ -20,4 +23,10 @@
         android:name="com.hyeeyoung.wishboard.view.common.screens.GalleryImageFragment"
         android:label="fragment_gallery_image"
         tools:layout="@layout/fragment_gallery_image"/>
+
+    <fragment
+        android:id="@+id/folderListFragment"
+        android:name="com.hyeeyoung.wishboard.view.folder.screens.FolderListFragment"
+        android:label="fragment_folder_list"
+        tools:layout="@layout/fragment_folder_list"/>
 </navigation>
