--- a/app/src/main/res/layout/item_folder_horizontal.xml
+++ b/app/src/main/res/layout/item_folder_horizontal.xml
@@ -19,36 +19,37 @@
         android:paddingVertical="10dp">
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/folder_image"
+            android:id="@+id/thumbnail"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:background="@android:color/transparent"
+            android:foreground="@color/ultraSemiTransparent"
             android:scaleType="centerCrop"
-            android:src="@drawable/sample"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:src="@drawable/sample" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/layout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            android:layout_marginStart="5dp"
             android:gravity="center_vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/folder_image"
+            app:layout_constraintStart_toEndOf="@id/thumbnail"
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
                 android:id="@+id/folder_name"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
+                android:layout_marginEnd="20dp"
                 android:layout_weight="1"
                 android:fontFamily="@font/nanum_square_b"
                 android:text="@{item.name}"
                 android:textColor="@color/gray_700"
-                android:textSize="15dp"
+                android:textSize="15sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/btn_radio"
                 app:layout_constraintStart_toStartOf="parent"
@@ -61,7 +62,6 @@
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
                 android:button="@drawable/selector_checkbox"
-                android:onClick="onClick"
                 android:state_checked="false"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
