--- a/app/src/main/res/layout/item_folder_square.xml
+++ b/app/src/main/res/layout/item_folder_square.xml
@@ -18,7 +18,7 @@
         android:padding="10dp">
 
         <ImageView
-            android:id="@+id/folder_image"
+            android:id="@+id/thumbnail"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:foreground="@color/ultraSemiTransparent"
@@ -32,7 +32,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/folder_image">
+            app:layout_constraintTop_toBottomOf="@id/thumbnail">
 
             <TextView
                 android:id="@+id/folder_name"
