--- a/app/src/main/res/layout/dialog_folder_more.xml
+++ b/app/src/main/res/layout/dialog_folder_more.xml
@@ -2,47 +2,66 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="">
+    tools:context="com.hyeeyoung.wishboard.view.folder.screens.FolderMoreDialogFragment">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/background_bottom_sheet_dialog"
+        android:background="@drawable/background_dialog_top_corner"
         android:orientation="vertical"
-        android:padding="20dp"
-        tools:ignore="MissingConstraints">
+        android:paddingBottom="20dp">
+
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/nanum_square_eb"
+            android:gravity="center"
+            android:text="@string/folder_more_dialog_title"
+            android:textColor="@color/gray_700"
+            android:textSize="17sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
             android:id="@+id/cancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="8dp"
             android:layout_marginBottom="20dp"
             android:background="@android:color/transparent"
-            android:onClick="onClick"
-            android:src="@drawable/ic_delete" />
+            android:padding="@dimen/spacing12"
+            android:src="@drawable/ic_delete"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/btn_del"
+            android:id="@+id/delete"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="20dp"
             android:fontFamily="@font/nanum_square_b"
-            android:onClick="onClick"
+            android:gravity="center"
             android:paddingVertical="10dp"
             android:text="@string/folder_delete"
             android:textColor="@color/gray_700"
-            android:textSize="17dp" />
+            android:textSize="15sp"
+            app:layout_constraintTop_toBottomOf="@id/title" />
 
         <TextView
-            android:id="@+id/btn_upt"
+            android:id="@+id/update"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
             android:fontFamily="@font/nanum_square_b"
-            android:onClick="onClick"
+            android:gravity="center"
             android:paddingVertical="10dp"
             android:text="@string/folder_name_edit"
             android:textColor="@color/gray_700"
-            android:textSize="17dp" />
+            android:textSize="15sp"
+            app:layout_constraintTop_toBottomOf="@id/delete" />
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
